src/components/Logbook/Logbook.module.scss
.container {
  background-color: #edf4fa;
  box-sizing: border-box;
  display: flex;
  //justify-content: center;
  height: 100vh;
  min-height: 435px;
  padding: 0 25px 0 0;
  width: 100vw;
  //min-width: fit-content;
}

.appHeader {
  background-color: #fff;
  border: 1px solid rgba(226, 235, 244, 0.85);
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0 3px 16px rgba(226, 233, 237, 0.61);
  display: flex;
  padding: 13px 20px;
  width: 100%;
}

.delimiter {
  margin-left: 15px;
  height: 15px;
}

.leftContent {
  padding: 15px 15px 25px 25px;
  overflow: hidden;
  width: calc(100% - 287px);
}

.rightSidebar {
  //align-items: center;
  background-color: #fff;
  border-radius: 12px;
  box-shadow: 0 3px 16px rgba(226, 233, 237, 0.61);
  display: flex;
  justify-content: center;
  padding: 20px 10px;
  text-align: center;
  min-width: 287px;
  max-width: 287px;
  margin-top: 15px;
  min-height: 400px;
  height: calc(100vh - 40px);

  .hero {
    //display: flex;
    //justify-content: center;
  }

  .employeeInfo {
    width: 100%;
  }

  .employeeName {
    color: #333945;
    font-family: 'Helvetica Neue Bold', sans-serif;
    font-size: 25px;
    //font-weight: 600;
  }

  .date {
    color: rgba(0, 0, 0, 0.34);
    font-family: 'Helvetica Neue Medium', sans-serif;
    font-size: 14px;
    font-weight: 500;
  }
}

.emptyWrapper {
  align-self: center;
  font-family: Helvetica Neue, sans-serif;
  font-size: 18px;
  color: #5f6265;
  width: 200px;

  svg {
    width: 174px !important;
    height: 168px !important;
  }
}

.multipleEntries {
  width: 100%;
  padding: 0 10px;

  .header {
    align-items: center;
    display: flex;
    color: #333945;
    font-family: 'Helvetica Neue Medium', sans-serif;
    font-size: 16px;
    font-weight: 500;
  }

  .content {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: calc(100% - 60px);

    > div {
      align-items: center;
      display: flex;
      flex-direction: column;
      height: 50%;
    }

    .topBlock {
      justify-content: flex-end;
      padding-bottom: 20px;
    }

    .bottomBlock {
      justify-content: flex-start;
      padding-top: 20px;
    }
  }

  .entryTitle {
    color: #333945;
    font-family: 'Helvetica Neue Bold', sans-serif;
    font-size: 38px;
    //font-weight: 600;
    padding: 10px 0;
  }

  .entryDescription {
    color: #818f94;
    font-family: Helvetica Neue, sans-serif;
    font-size: 20px;
    font-weight: 400;
  }

  .checkboxIcon {
    width: 30px;
    height: 30px;
  }

  .clockIcon {
    width: 34px;
    height: 34px;

    g {
      fill: #0085ff !important;
      stroke-width: 0;
    }

    path {
      fill: #fff !important;
    }
  }
}

.hideOn936 {
  display: flex;
  align-items: center;

  @media only screen and (max-width: 936px) {
    display: none;
  }
}

.hideOn815 {
  display: flex;
  align-items: center;

  @media only screen and (max-width: 815px) {
    display: none;
  }
}

.hideOn750 {
  display: flex;
  align-items: center;

  @media only screen and (max-width: 750px) {
    display: none;
  }
}

.hideOn660 {
  display: flex;
  align-items: center;
  flex-grow: 2;

  @media only screen and (max-width: 660px) {
    display: none;
  }
}

